# owlsee-bot

./: pyproject.toml
owlsee_bot/: .env.example  functions.py  main.py  prep_training_data.py  questions.py  train.py
owlsee_bot/embedding/: embed.py
