[tool.poetry]
name = "owlsee-bot"
version = "0.1.0"
description = ""
authors = ["Eddie <eddie.freeman@streem.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^21.1.1"
openai = "^1.28.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
